kustomize/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podpri-frontend-deployment
  labels:
    app: podpri-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podpri-frontend
  template:
    metadata:
      labels:
        app: podpri-frontend
    spec:
      containers:
        - name: podpri-frontend
          image: podpri-frontend
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
