kustomize/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podpri-pic-frontend
spec:
  selector:
    app: podpri-pic-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
