kustomize/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podpri-frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - moj.djnd.si
        - moj.danesjenovdan.si
      secretName: podpri-frontend-tls
  rules:
    - host: moj.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podpri-frontend
                port:
                  number: 80
    - host: moj.danesjenovdan.si
      http: *http_paths
